semi-fix styles for log not moving too much

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,15 @@
 
 body{
+    margin: 0;
     width: 100vw;
     height: 100vh;
     background-color: #333;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+body > *{
+    margin: 20px 3rem;
 }
 
 #game-settings{
@@ -13,15 +17,13 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
+    min-width: 225px;
 }
 
 #boards{
     display: grid;
     gap: 2rem;
-
     /* temporary */
-    max-width: 40%;
-    margin-top: 20px; 
 }
 
 .boardFloor{
@@ -55,4 +57,8 @@ body{
 }
 .spot.bottom{
     border-bottom: none;
+}
+
+#log{
+    min-width: 290px;
 }
